force-app/main/default/objects/tdc_tsw__AnswerAction__c/tdc_tsw__AnswerAction__c.object-meta.xml
<CustomObject>
    <label>Answer Action</label>
    <nameField>
        <label>Answer Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answer Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>