force-app/main/default/objects/tdc_tsw__AnswerAction__c/fields/tdc_tsw__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Action_Type__c</fullName>
    <label>Action Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>