force-app/main/default/objects/tdc_tsw__AnswerAction__c/fields/tdc_tsw__Answer__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Answer__c</fullName>
    <label>Answer</label>
    <referenceTo>tdc_tsw__Answer__c</referenceTo>
    <relationshipLabel>Answer Actions</relationshipLabel>
    <relationshipName>AnswerActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>