force-app/main/default/objects/tdc_tsw__AnswerAction__c/fields/tdc_tsw__Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>