force-app/main/default/objects/tdc_tsw__AnswerAction__c/fields/tdc_tsw__Value__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Value__c</fullName>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>